# kleardb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  kleardb.cpp  kleardb_test.cpp  main.cpp  profile.cpp  requirements.txt
.github/: ci-deps.dockerfile  conan.dockerfile  conan.profile  conan_profile.txt
.github/workflows/: main.yml
kleardb/: DataPage.cpp  DataPage.hpp  Schema.hpp  serialize.hpp
profile/: CMakeLists.txt  cache.py  profile.cpp  profile_cache_ssd_single.json  profile_cache_ssd_sizes.json  profile_read.json  profile_read.py  profile_read_hdd.json
profile/test_data/: generate_large_random_file.sh
